--- a/src/components/sbb-form-error/sbb-form-error.scss
+++ b/src/components/sbb-form-error/sbb-form-error.scss
@@ -5,16 +5,21 @@
 
 :host {
   --form-error-height: calc(var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs));
+  --form-error-color: var(--sbb-color-red125-default);
 
   // Overrides sbb icon
   --sbb-icon-svg-width: var(--sbb-size-icon-form-error);
   --sbb-icon-svg-height: var(--sbb-size-icon-form-error);
 
+  @include ifForcedColors {
+    --form-error-color: LinkText;
+  }
+
   @include text-xs--regular;
 
   display: flex;
   align-items: flex-start;
-  color: var(--sbb-color-red125-default);
+  color: var(--form-error-color);
 
   // Error height = text line-height
   min-height: var(--form-error-height);
