--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -140,7 +140,7 @@ slot[name='label'] > span {
 
 // Input
 /* stylelint-disable plugin/stylelint-bem-namics */
-.form-field__input ::slotted(:is(input, select, [id^='sbb-field-input-'])) {
+.form-field__input ::slotted(:is(input, select, .sbb-form-field-element)) {
   @include text-m--regular;
   @include placeholder;
   @include ellipsis;
