fix: always render label

--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -131,6 +131,10 @@
   color: var(--form-field-label-color);
   user-select: none;
   pointer-events: none;
+
+  &[hidden] {
+    display: none;
+  }
 }
 
 ::slotted(*[slot='label']),
