--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -44,17 +44,6 @@
   padding-inline-end: var(--sbb-spacing-fixed-2x);
 }
 
-.sbb-menu-action__button[disabled] {
-  sbb-icon {
-    color: var(--sbb-color-graphite-default);
-  }
-
-  .sbb-menu-action__label {
-    color: var(--sbb-color-graphite-default);
-    text-decoration: line-through;
-  }
-}
-
 .sbb-menu-action__amount {
   @include text-xxs--bold;
 
@@ -65,6 +54,22 @@
   padding-inline: var(--sbb-spacing-fixed-1x);
   border-radius: var(--sbb-border-radius-8x);
   background-color: var(--sbb-color-red-default);
-  min-width: var(--sbb-spacing-fixed-4x);
+  width: var(--sbb-spacing-fixed-4x);
+  min-width: fit-content;
   max-height: var(--sbb-spacing-fixed-4x);
+}
+
+.sbb-menu-action__button[disabled] {
+  sbb-icon {
+    color: var(--sbb-color-graphite-default);
+  }
+
+  .sbb-menu-action__label {
+    color: var(--sbb-color-graphite-default);
+    text-decoration: line-through;
+  }
+
+  .sbb-menu-action__amount {
+    display: none;
+  }
 }
