fix: add icon for select variant

--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -104,7 +104,9 @@
 
 // Ensure slotted inline elements are vertically centered
 ::slotted(*[slot='prefix']),
-::slotted(*[slot='suffix']) {
+::slotted(*[slot='suffix']),
+.sbb-form-field__select-input-icon {
+  min-width: var(--sbb-icon-svg-width);
   display: flex;
 }
 
