--- a/src/components/sbb-alert/sbb-alert.scss
+++ b/src/components/sbb-alert/sbb-alert.scss
@@ -56,6 +56,7 @@
 
   // Align the height to the line-height. Because the line-height is written as a multiplier, we need to multiply it by the font-size.
   height: calc(var(--sbb-alert-title-font-size) * var(--sbb-alert-title-line-height));
+  min-width: var(--sbb-alert-icon-size);
 
   --sbb-icon-svg-width: var(--sbb-alert-icon-size);
   --sbb-icon-svg-height: var(--sbb-alert-icon-size);
