feat: adjust event listener and icon position

--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -79,7 +79,7 @@ input[type='checkbox'] {
   color: var(--checkbox-label-color);
 }
 
-.checkbox__label--reverse {
+.checkbox__label--before {
   flex-direction: row-reverse;
 }
 
