style: fix review

--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -25,8 +25,7 @@
   gap: var(--sbb-spacing-fixed-1x);
   color: var(--text-color-normal);
   text-decoration: none;
-
-  // word-break: break-word; // FIXME
+  word-break: break-word;
   fill: currentcolor;
 
   &:focus-visible {
