feat: enhance position logic for sbb-pearl-chain

--- a/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
@@ -219,7 +219,7 @@
   @include dot;
 
   background-color: var(--color-current-location);
-  top: 0;
+  top: -200%;
   z-index: 4;
 
   // --status-position: defined in .tsx file
