fix(sbb-link): fix normalize button styles to not interfere with sbb-link in Safari

--- a/src/global/core/shared/normalize.scss
+++ b/src/global/core/shared/normalize.scss
@@ -170,9 +170,7 @@ Correct the inability to style clickable types in iOS and Safari.
 */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+:is(button, input):where([type='button'], [type='reset'], [type='submit']) {
   -webkit-appearance: button;
 }
 
