--- a/src/components/sbb-panel/sbb-panel.scss
+++ b/src/components/sbb-panel/sbb-panel.scss
@@ -5,33 +5,31 @@
 :host {
   --panel-font-family: 'SBBWeb Light';
   --panel-letter-spacing: 0.01em;
-  --panel-line-height: 1.2;
-  --panel-font-size-text-xxl: var(--sbb-typo-scale-1-5x);
+  --panel-line-height: var(--sbb-typo-line-height-titles);
+  --panel-font-size-text: var(--sbb-typo-scale-1-5x);
   --panel-opacity: var(--panel-opacity-override, 0.9);
   --panel-padding-inline: var(--sbb-spacing-responsive-m);
   --panel-padding-block: var(--sbb-spacing-responsive-s);
   --panel-background-color: var(--sbb-color-red-default);
   --text-margin-block-start: var(--sbb-spacing-fixed-6x);
 
-  // TODO: missing design tokens
   --panel-width: #{px-to-rem-build(223)};
   --panel-height: #{px-to-rem-build(167)};
   --panel-triangle-height: #{px-to-rem-build(33)};
 
   @include mq($from: medium) {
-    // TODO: missing design tokens
     --panel-width: #{px-to-rem-build(321)};
     --panel-height: #{px-to-rem-build(240.11)};
     --panel-triangle-height: #{px-to-rem-build(47.45)};
-    --panel-line-height: 1.3;
+    --panel-font-size-text: var(--sbb-typo-scale-2x);
   }
 
   @include mq($from: large) {
-    // TODO: missing design tokens
     --panel-width: #{px-to-rem-build(428)};
     --panel-height: #{px-to-rem-build(320.38)};
     --panel-triangle-height: #{px-to-rem-build(63.31)};
-    --panel-font-size-text-xxl: var(--sbb-typo-scale-2-5x);
+    --panel-font-size-text: var(--sbb-typo-scale-2-5x);
+    --panel-line-height: 1.2;
   }
 
   opacity: var(--panel-opacity);
@@ -62,10 +60,14 @@
 .panel__text,
 ::slotted([slot='text']) {
   font-family: var(--panel-font-family);
-  font-size: var(--panel-font-size-text-xxl);
+  font-size: var(--panel-font-size-text);
   color: var(--sbb-color-white-default);
   line-height: var(--panel-line-height);
   margin-block: 0;
+  font-weight: normal;
+  letter-spacing: var(--panel-letter-spacing);
+
+  @include fontSmoothing;
 }
 
 .panel__link {
